fixed nav responsiveness on index, fixed bug with overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,6 +22,7 @@ body {
 }
 
 .navbar-logo {
+    box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.2);
     height: 75px;
     border-radius: 20px;
 }
@@ -212,6 +213,7 @@ video {
     justify-content: center;
     align-items: center;
     width: 100%;
+    overflow-x: hidden
 }
 
 .div {
@@ -428,6 +430,8 @@ footer {
     /* Navbar */
     .navbar-links {
         margin-left: 55%;
+        position: relative;
+        z-index: 3;
     }
     .navbar-logo {
         height: 60px;
